--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 	</head>
 	<body>
-		<div class="game-over-modal display-none">
-			<i class="fas fa-redo-alt restart"></i>
+		<div class="container">
+			<div class="game-over-modal display-none">
+				<i class="fas fa-redo-alt restart"></i>
+			</div>
 		</div>
 		<script src="js/resources.js"></script>
 		<script src="js/app.js"></script>
